--- a/styles/style.css
+++ b/styles/style.css
@@ -13,13 +13,13 @@ nav ul {
 
 .links-list a {
   text-align: center;
-  display: flex;
+  display: block ;
   font-size: 120%;
   background-color: rgb(179,57,81);
   color: #fff;
   text-decoration: none;
   padding: 1em 2em;
-  width: 2e,;
+  width: ;
 }
 .links-list a:hover {
   background-color: rgb(66, 28, 40);
@@ -53,10 +53,27 @@ nav ul {
 	font-size:100%;
 }
 .inside dl{
+	font-size:100%;
 	padding-left:20px;
 }
 .inside p{
+	font-size:100%;
 	padding-left:20px;
+}
+.inside img{
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+div.gallery img {
+  width: 100%;
+  height: auto;
+}
+
+div.desc {
+  padding: 15px;
+  text-align: center;
 }
 
 main{
