--- a/styles/style.css
+++ b/styles/style.css
@@ -19,7 +19,7 @@ nav ul {
   color: #fff;
   text-decoration: none;
   padding: 1em 2em;
-  width: ;
+  min-width: 80px;
 }
 .links-list a:hover {
   background-color: rgb(66, 28, 40);
@@ -37,11 +37,21 @@ nav ul {
 	width: 60%;*/
 }
 .intro iframe{
+	
 	display: block;
+	width:80%;
 	margin:auto;
-	/*padding-left:15%;*/
 }
 .intro h1{
+	text-align: center;
+}
+.intro img{
+	margin-left: 30%;
+	margin-right: 30%;
+	width:40%;
+	height: auto;
+}
+.intro p{
 	text-align: center;
 }
 .inside {
@@ -56,15 +66,22 @@ nav ul {
 	font-size:100%;
 	padding-left:20px;
 }
+
 .inside p{
 	font-size:100%;
 	padding-left:20px;
+	padding-right:20px;
+}
+.inside dt{
+	font-weight: bolder;
 }
 .inside img{
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
+	width: 100%;
+	height: auto;
 }
+
+
+
 
 div.gallery img {
   width: 100%;
